Days/day-13/Locust/locust-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - locust.israeldoamaral.com.br
  rules:
  - host: locust.israeldoamaral.com.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: locust-giropops
              port:
                number: 80
